--- a/brisca/app/Resources/views/base.html.twig
+++ b/brisca/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-
+{#TODO imagen robot si se desconecta?#}
     <title>{{ title }}</title>
 
     {% block stylesheets %}
@@ -23,6 +23,8 @@
 
 {% block body %}{% endblock %}
 {% block scripts %}
+    <script src="{{ asset('js/lib/modernizr-custom.js') }}"></script>
+
     <script src="{{ asset('js/lib/jquery-2.2.3.min.js') }}"></script>
     {#<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>#}
 
