--- a/brisca/web/css/game3.scss
+++ b/brisca/web/css/game3.scss
@@ -3,6 +3,9 @@ $height: 480;
 $cardWidth: 58;
 $cardHeight: 84;
 
+$accentColor: #ffc107;
+$accentColorL5: #e8f5e9;
+
 // TODO over en las cartas
 
 #game-container{
@@ -71,7 +74,7 @@ $cardHeight: 84;
   }
 
   50% {
-    border-color: rgb(226,186,120);
+    border-color: $accentColor;
   }
 
   100% {
@@ -110,7 +113,9 @@ $cardHeight: 84;
 }
 
 #my-cards .game-card:hover {
-  transform: translate(-1px, -6px);
+  position: relative;
+  top: -3px;
+  left: -3px;
   box-shadow: 2px 2px 10px black;
 }
 
@@ -126,7 +131,7 @@ $cardHeight: 84;
 }
 
 #chrono {
-  color: gold;
+  color: #a37e43;
   background: -webkit-linear-gradient(transparent, transparent),
   -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
   background: -o-linear-gradient(transparent, transparent);
@@ -287,8 +292,27 @@ $cardHeight: 84;
 }
 
 // entre móvil y tablet
-@media (min-width: 600px) {
+@media (min-width: 601px) {
   #game-container{
     margin-top: 0px;
+  }
+}
+
+// móvil
+@media (max-width: 600px) {
+
+  #finish-text {
+    font-family: 'Rye', cursive;
+    font-size: 1em !important;
+  }
+
+  #game-container{
+    margin-top: -10px;
+  }
+
+  .result-img {
+    img {
+      height: 80px;
+    }
   }
 }
