--- a/brisca/web/css/main.scss
+++ b/brisca/web/css/main.scss
@@ -1,5 +1,78 @@
+$mainColor: #4CAF50;
+$mainColorD2: #388e3c;
+$mainColorD3: #2e7d32;
+$mainColorL2: #81c784;
+$mainColorL1: #66bb6a;
+$accentColor: #ffc107;
+$accentColorL5: #e8f5e9;
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: $mainColorL2;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: $mainColorL1;
+}
+::-webkit-scrollbar-thumb:active {
+  background: $mainColorD2;
+}
+
+// Override materialize
+input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid $accentColor;
+  box-shadow: 0 1px 0 0 $accentColor;
+}
+
+input:not([type]):focus:not([readonly])+label, input[type=text]:focus:not([readonly])+label, input[type=password]:focus:not([readonly])+label, input[type=email]:focus:not([readonly])+label, input[type=url]:focus:not([readonly])+label, input[type=time]:focus:not([readonly])+label, input[type=date]:focus:not([readonly])+label, input[type=datetime]:focus:not([readonly])+label, input[type=datetime-local]:focus:not([readonly])+label, input[type=tel]:focus:not([readonly])+label, input[type=number]:focus:not([readonly])+label, input[type=search]:focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label {
+  color: $accentColor;
+}
+
+.input-field label {
+  left: 0;
+}
+
+.input-group {
+  display: table;
+}
+
+.input-group input, .suffix {
+  display: table-cell;
+}
+
+.suffix {
+  width:1%;
+}
+
+.tabs .tab a {
+  color: black;
+}
+
+.tabs .tab a:hover {
+  color: #555;
+}
+
+.tabs .tab.disabled a {
+  color: #555;
+}
+
+button:focus {
+  outline: none;
+  background-color: $accentColor;
+}
+
+.tabs .indicator {
+  background-color: #333;
+}
+
+// End materialize
+
 body, html {
-  min-width: 320px;
+  min-width: 300px;
 }
 
 #load-layer {
@@ -7,7 +80,7 @@ body, html {
   z-index: 1100;
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: $mainColor;
 
   & > div {
     //width: 80%;
@@ -16,14 +89,9 @@ body, html {
   }
 }
 
-#modal1, #chat-container, #index-chat-container {
-  background-color: greenyellow;
-}
-
 .chat-msg {
-  width: 75%;
+  max-width: 75%;
   padding: 8px;
-  background-color: white;
   border-radius: 10px;
   margin: 3px 2%;
 }
@@ -47,7 +115,7 @@ body, html {
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 20px 0 70px 0;
+  padding: 0 0 80px 0;
 
   .msgs-container {
 
@@ -67,15 +135,13 @@ body, html {
       bottom: 15px;
       left: 5%;
       width: 90%;
-
-      input {
-        width: 70%;
-      }
-
-      button {
-
-      }
     }
+  }
+}
+
+.modal-content {
+  .chat-box .msgs-container .chat {
+    bottom: 0;
   }
 }
 
@@ -83,7 +149,7 @@ body, html {
   width: 50px;
   height: 40px;
   vertical-align: middle;
-  border: 2px solid black;
+  border: 2px solid $mainColorD3;
   background-color: white;
   border-radius: 5px;
 }
