--- a/brisca/app/Resources/views/Page/index.html.twig
+++ b/brisca/app/Resources/views/Page/index.html.twig
@@ -20,7 +20,7 @@
             <div class="card container-in-slider">
                 <div class="card-content">
                     <form action="{{ path('homepage') }}" method="post">
-                        <p class="card-title center">Entrar</p>
+                        <p class="card-title center {{ mainColor }}-text text-darken-2">Entrar</p>
 
                         {% if error %}
                             {% set errorMsg = error.messageKey|trans(error.messageData, 'security') %}
@@ -42,11 +42,15 @@
                             </div>
                         {% endfor %}
 
-                        <label for="username">Email:</label>
-                        <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="Email"/>
+                        <div class="input-field">
+                            <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+                            <label for="username">Email:</label>
+                        </div>
 
-                        <label for="password">Contraseña:</label>
-                        <input type="password" id="password" name="_password" placeholder="Contraseña"/>
+                        <div class="input-field">
+                            <input type="password" id="password" name="_password"/>
+                            <label for="password">Contraseña:</label>
+                        </div>
 
                         {#
                             If you want to control the URL the user
@@ -56,19 +60,19 @@
                         <input type="hidden" name="_target_path" value="/jugar" />
 
                         <div class="card-action">
-                            <button class="btn waves-effect waves-light margin-right-l" type="submit">
+                            <button class="{{ accentColor }} btn waves-effect waves-light margin-right-l" type="submit">
                                 Entrar
                                 <i class="material-icons right">send</i>
                             </button>
                             <div class="hide-on-med-and-up margin-bottom-m"></div>
-                            <a href="{{ path('register') }}">Registrarse</a>
+                            <a href="{{ path('register') }}" class="{{ accentColor }}-text text-darken-3">Registrarse</a>
                         </div>
                     </form>
                 </div>
             </div>
         {% else %}
 
-            <div id="index-chat-container" class="card container-in-slider">
+            <div id="index-chat-container" class="card container-in-slider {{ mainColor }} lighten-4">
                 {% include 'includes/chat.html.twig' %}
             </div>
 
@@ -76,16 +80,13 @@
 
         <ul class="slides">
             <li>
-                <img src="http://lorempixel.com/580/250/nature/1"> <!-- random image -->
+                <img src="{{ asset('img/img2.jpg') }}"> <!-- random image -->
             </li>
             <li>
-                <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+                <img src="{{ asset('img/img3.jpg') }}"> <!-- random image -->
             </li>
             <li>
-                <img src="http://lorempixel.com/580/250/nature/3"> <!-- random image -->
-            </li>
-            <li>
-                <img src="http://lorempixel.com/580/250/nature/4"> <!-- random image -->
+                <img src="{{ asset('img/img6.jpg') }}"> <!-- random image -->
             </li>
         </ul>
     </div>
