--- a/brisca/app/Resources/views/base.html.twig
+++ b/brisca/app/Resources/views/base.html.twig
@@ -40,7 +40,7 @@
         <script>
             var name = '{{ user.nick }}',
                 img = '{{ user.imgPath }}',
-                socket = io('http://localhost:3000');
+                socket = io('http://192.168.0.169:3000');
         </script>
 
         <script src="{{ asset('js/chat.js') }}"></script>
